--- a/libs/deepagents-web/pyproject.toml
+++ b/libs/deepagents-web/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "websockets>=13.0",
   "python-multipart>=0.0.12",
   "python-dotenv",
+  "playwright>=1.40.0",
 ]
 
 [project.scripts]
