feat：新增cua subagent

--- a/libs/deepagents-cli/pyproject.toml
+++ b/libs/deepagents-cli/pyproject.toml
@@ -60,6 +60,11 @@ lint = [
     "mypy"
 ]
 
+cua = [
+    "cua-agent",
+    "cua-computer",
+]
+
 [build-system]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
