--- a/libs/deepagents-desktop/package.json
+++ b/libs/deepagents-desktop/package.json
@@ -39,10 +39,13 @@
     "directories": {
       "output": "dist-electron"
     },
+    "asar": true,
     "files": [
       "dist/**/*",
-      "electron/**/*"
+      "electron/**/*",
+      "!node_modules/**/*"
     ],
+    "extraResources": [],
     "win": {
       "target": "nsis",
       "icon": "public/icon.ico"
@@ -54,6 +57,10 @@
     "linux": {
       "target": "AppImage",
       "icon": "public/icon.png"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
