feat：web端与桌面端界面统一

--- a/libs/deepagents-desktop/package.json
+++ b/libs/deepagents-desktop/package.json
@@ -12,6 +12,7 @@
     "electron:start": "electron ."
   },
   "dependencies": {
+    "deepagents-ui": "file:../deepagents-ui",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
